--- a/server/views/reporting/reportingDate.pug
+++ b/server/views/reporting/reportingDate.pug
@@ -7,10 +7,7 @@ block content
         div.pure-u-1
             include ../includes/back
             include ../includes/personalDetailsSummary
-            +errorBannerWithDetail(errorObject, [
-                {field: 'reportingDate', message: 'Enter a valid date'},
-                {field: 'reportingTime', message: 'Enter a valid time'}
-            ])
+            +errorBannerWithDetail(errorObject, [{field: 'reportingDate'}, {field: 'reportingTime'}])
 
     div.pure-g.largePaddingBottom
         div.pure-u-2-3
