--- a/server/views/search/includes/resultsTable.pug
+++ b/server/views/search/includes/resultsTable.pug
@@ -39,9 +39,9 @@ else
                                         | , #{prisoner.firstName}
 
 
-                    td.bookingId
-                        if prisoner.bookingId
-                            | #{prisoner.bookingId}
+                    td.offenderNo
+                        if prisoner.offenderNo
+                            | #{prisoner.offenderNo}
 
                     td.location
                         if prisoner.internalLocationDesc
