--- a/server/views/send/roToCaOptedOut.pug
+++ b/server/views/send/roToCaOptedOut.pug
@@ -2,7 +2,7 @@ extends ./templates/roToCaTemplate
 
 block form
 
-    form#acceptanceForm(method='POST' action='/hdc/send/')
+    form#acceptanceForm(method='POST')
         input(type="hidden" name="_csrf" value=csrfToken)
         input(type="hidden" name="nomisId" value=nomisId)
         input(type="hidden" name="transitionType" value='roToCaOptedOut')
