--- a/server/views/taskList/prisonerDetails.pug
+++ b/server/views/taskList/prisonerDetails.pug
@@ -10,16 +10,17 @@ div#personalDetails.pure-g.borderBottom.paddingBottom
             else
                 img#prisonerImage.pure-img(src= "/public/images/no-photo.png")
 
-        if licenceVersion
-            div.largeMarginTop
-                div Working version
-                div
-                    span.bold V#{licenceVersion}
-        if approvedVersion
-            div.largeMarginTop
-                div Approved version
-                div
-                    span.bold V#{approvedVersion.version}, #{approvedVersion.timestamp}
+        if licenceStatus.decisions.eligible
+            if licenceVersion
+                div.largeMarginTop
+                    div Working version
+                    div
+                        span.bold V#{licenceVersion}
+            if approvedVersion
+                div.largeMarginTop
+                    div Approved version
+                    div
+                        span.bold V#{approvedVersion.version}, #{approvedVersion.timestamp}
 
     div.pure-u-1.pure-u-md-5-24.padRight15
         div.midMarginBottom
