Re-use address submission task

--- a/server/views/taskList/taskList.pug
+++ b/server/views/taskList/taskList.pug
@@ -63,6 +63,8 @@ block content
                     include HDCRefusalTask
                     if allowedTransition === 'caToDmRefusal'
                         include caSubmitRefusalTask
+                    else if allowedTransition === 'caToRo'
+                        include caSubmitAddressReviewTask
                     else
                         include caSubmitApprovalTask
 
