--- a/server/views/taskList/caSubmitApprovalTask.pug
+++ b/server/views/taskList/caSubmitApprovalTask.pug
@@ -1,16 +1,10 @@
 div.largeMarginBottom.borderTop
 
-    - var addressReviewNeeded = allowedTransition === 'caToRo'
-    - var approvalNeeded = allowedTransition === 'caToDm'
-
-    if addressReviewNeeded
-        h2.heading-medium Submit to responsible officer
-    else
-        h2.heading-medium Submit to decision maker
+    h2.heading-medium Submit to decision maker
 
     div.pure-g
         div.pure-u-3-4
-            if approvalNeeded || addressReviewNeeded
+            if allowedTransition === 'caToDm'
                 | Ready to submit
             else if licenceStatus.decisions.postponed
                 | Submission unavailable - HDC application postponed
@@ -20,9 +14,5 @@ div.largeMarginBottom.borderTop
                 | Submission unavailable - Tasks not yet complete
 
         div.pure-u-1-4.center
-            if addressReviewNeeded
-                a#continueBtn.taskListAction.center.button(href='/hdc/send/addressReview/' + prisonerInfo.offenderNo)
-                    | Continue
-            if approvalNeeded
-                a#continueBtn.taskListAction.center.button(href='/hdc/send/approval/' + prisonerInfo.offenderNo)
-                    | Continue
+            a#continueBtn.taskListAction.center.button(href='/hdc/send/approval/' + prisonerInfo.offenderNo)
+                | Continue
