--- a/server/views/taskList/caSubmitApprovalTask.pug
+++ b/server/views/taskList/caSubmitApprovalTask.pug
@@ -13,6 +13,7 @@ div.largeMarginBottom.borderTop
             else
                 | Submission unavailable - Tasks not yet complete
 
-        div.pure-u-1-4.center
-            a#continueBtn.taskListAction.center.button(href='/hdc/send/approval/' + prisonerInfo.offenderNo)
-                | Continue
+        if allowedTransition === 'caToDm'
+            div.pure-u-1-4.center
+                a#continueBtn.taskListAction.center.button(href='/hdc/send/approval/' + prisonerInfo.offenderNo)
+                    | Continue
