Remove id that broke layout

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -47,7 +47,7 @@ html(lang="en")
 
         include global-header
 
-        main#content.app-container(role="main")
+        main.app-container(role="main")
             block content
 
         footer(class="group js-footer", id="footer", role="contentinfo")
